--- a/06-restapi2/server/package.json
+++ b/06-restapi2/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hotel-api",
+  "name": "rick-morty-api",
   "version": "1.0.0",
-  "description": "Hotel API",
+  "description": "Rick & Morty API",
   "main": "index.js",
   "scripts": {
-    "mock-server": "json-server --routes ./config/routes.json --watch mock-data/hotels-data.json --middlewares ./config/hotel.middleware.js --no-delete-cascade"
+    "mock-server": "json-server --routes ./config/routes.json --watch mock-data/character-data.json --middlewares ./config/character.middleware.js --no-delete-cascade"
   },
   "author": "Lemoncode",
   "license": "MIT",
