--- a/03-bundling-extra/package.json
+++ b/03-bundling-extra/package.json
@@ -8,8 +8,10 @@
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "rimraf dist run-p -l type-check build:prod",
     "build:prod": "webpack --config webpack.prod.js",
+    "start-prod": "webpack serve --config webpack.prod.js",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
+    "analyzer": "webpack --config webpack.analyzer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -35,6 +37,7 @@
     "style-loader": "^3.3.1",
     "typescript": "^4.9.4",
     "webpack": "^5.78.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
